--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,14 @@ html {
 .swiper-button-next {
     color: white; 
 }
+
+/* Fluid typography */
+h1 {
+    font-size: clamp(32px, 4vw, 56px);
+}
+h2 {
+    font-size: clamp(26px, 4vw, 40px);
+}
+p{
+    font-size: clamp(16px, 4vw, 18px);
+}
